# firmware

./: LICENSE  README.md
python/: .gitignore  README.md  pyproject.toml
python/micropython/devices/: ad9833.py  ak09918.py  icm20600.py  pca9685.py  sh1107.py  ssd1306.py
python/micropython/imu/: fusion.py  imu.py
